--- a/index.html
+++ b/index.html
@@ -370,35 +370,19 @@
           <!-- below divs are for windows for videos -->
           <div id="logoplaybackvideo01" class="videoplaybackwindow">
             <div class="videoplaybackwindowinner">
-              <video
-                id="my-video"
-                class="video-js"
-                controls
-                preload="auto"
-                data-setup="{}"
-              >
-                <source src="assets/videos/speedy.mp4" type="video/mp4" />
-                <p class="vjs-no-js">
-                  To view this video please enable JavaScript, and consider
-                  upgrading to a web browser that
-                  <a
-                    href="https://videojs.com/html5-video-support/"
-                    target="_blank"
-                    >supports HTML5 video</a
-                  >
-                </p>
-              </video>
+              <iframe
+                width="640"
+                height="480"
+                src="https://www.youtube.com/embed/0lxoRBycOSA"
+                title=""
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
               <div id="description" class="row container">
                 <div class="col-lg-6 col-sm-12 force-left">
                   <h2>Speedy Video</h2>
                   <h6>Unknown date-2009</h6>
-                </div>
-                <div class="col-lg-6 col-sm-12 force-left">
-                  <p>
-                    Music: Unknown<br />Source: Magic Ring (Episode 21, Video
-                    CD)<br />
-                    <i>Speedy Video Distributors Sdn Bhd</i>
-                  </p>
                 </div>
               </div>
               <button class="logobutton" onclick="logoPlayback01close()">
@@ -410,26 +394,15 @@
         <!-- second logo -->
         <div id="logoplaybackvideo02" class="videoplaybackwindow">
           <div class="videoplaybackwindowinner">
-            <video
-              id="my-video"
-              class="video-js"
-              controls
-              preload="auto"
-              width="1280"
-              height="720"
-              data-setup="{}"
-            >
-              <source src="assets/videos/warner.mp4" type="video/mp4" />
-              <p class="vjs-no-js">
-                To view this video please enable JavaScript, and consider
-                upgrading to a web browser that
-                <a
-                  href="https://videojs.com/html5-video-support/"
-                  target="_blank"
-                  >supports HTML5 video</a
-                >
-              </p>
-            </video>
+            <iframe
+              width="640"
+              height="480"
+              src="https://www.youtube.com/embed/rJ1jh115ms4"
+              title=""
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
             <div id="description" class="row container">
               <div class="col-lg-6 col-sm-12 force-left">
                 <h2>Warner Bros. Home Entertainment</h2>
@@ -834,24 +807,15 @@
       <div class="bootlegs-header bootleg-header-anim-4">
         <div class="bootlegs-center-text">
           <h1 class="text-start bootleg-anim-4 golddisc-vid">
-            <video
-              id="golddisc"
-              class="video-js golddisc-vid"
-              controls
-              preload="auto"
-              data-setup="{}"
-            >
-              <source src="assets/videos/golddisc.mp4" type="video/mp4" />
-              <p class="vjs-no-js">
-                To view this video please enable JavaScript, and consider
-                upgrading to a web browser that
-                <a
-                  href="https://videojs.com/html5-video-support/"
-                  target="_blank"
-                  >supports HTML5 video</a
-                >
-              </p>
-            </video>
+            <iframe
+              width="640"
+              height="480"
+              src="https://www.youtube.com/embed/S3ObQg758cY"
+              title=""
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
             <div class="width-100">
               <button
                 class="logobutton skip-button-text-override width-wider-overwrite"
